--- a/index.html
+++ b/index.html
@@ -3,210 +3,161 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>酒田五法</title><!-- ページタイトル -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DARTS Simulator</title>
   <meta name="robots" content="noindex,nofollow">
-  <meta name="description" content="これはHTMLCSS の課題作品です。">
-  <!-- 上記で noindex,nofollow　としているため意味はないが一応 keywords 記載 -->
-  <meta name="keywords" content="株,酒田五法,テクニカル分析">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="これはJavaScript の課題作品です。">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css"><!-- CSSファイルの指定 -->
+  <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 </head>
 
+<html>
 
 <body>
-  <div id="HOME">
-    <header class="page-header wrapper">
-      <h1><a href="index.html"><img class="logo" src="images/logo.png" alt="坂田五法 ホーム"></a></h1>
-      <nav>
-        <ul class="main-nav">
-          <li><a href="index.html">ホーム</a></li>
-          <li><a href="about.html">酒田五法とは</a></li>
-          <li><a href="contact.html">お問い合わせ</a></li>
-        </ul>
-      </nav>
-    </header>
+  <header>
+    01（ゼロワン） - 501 - Open In Master Out
+  </header>
+
+  <video id="award_hattrick_back" src="" autoplay></video>
+
+  <div class="darts-board">
+
+    <div id="score"></div>
+    <div id="round_1"></div>
+    <div id="round_2"></div>
+    <div id="round_3"></div>
+    <div id="round_4"></div>
+    <div id="round_5"></div>
+    <div id="round_6"></div>
+    <div id="round_7"></div>
+    <div id="round_8"></div>
+
+    <img id="round_disp" src="">
+    <img id="award" src="">
+    <img id="cong" src="">
+    <video id="award_hattrick" src="" autoplay></video>
+
+    <div class="inner-bull" onclick="hit(this.className,50,4)"></div>
+    <div class="outer-bull" onclick="hit(this.className,50,5)"></div>
+
+    <div class="single-inner-20" onclick="hit(this.className,20,1)"></div>
+    <div class="single-inner-1" onclick="hit(this.className,1,1)"></div>
+    <div class="single-inner-18" onclick="hit(this.className,18,1)"></div>
+    <div class="single-inner-4" onclick="hit(this.className,4,1)"></div>
+    <div class="single-inner-13" onclick="hit(this.className,13,1)"></div>
+    <div class="single-inner-6" onclick="hit(this.className,6,1)"></div>
+    <div class="single-inner-10" onclick="hit(this.className,10,1)"></div>
+    <div class="single-inner-15" onclick="hit(this.className,15,1)"></div>
+    <div class="single-inner-2" onclick="hit(this.className,2,1)"></div>
+    <div class="single-inner-17" onclick="hit(this.className,17,1)"></div>
+    <div class="single-inner-3" onclick="hit(this.className,3,1)"></div>
+    <div class="single-inner-19" onclick="hit(this.className,19,1)"></div>
+    <div class="single-inner-7" onclick="hit(this.className,7,1)"></div>
+    <div class="single-inner-16" onclick="hit(this.className,16,1)"></div>
+    <div class="single-inner-8" onclick="hit(this.className,8,1)"></div>
+    <div class="single-inner-11" onclick="hit(this.className,11,1)"></div>
+    <div class="single-inner-14" onclick="hit(this.className,14,1)"></div>
+    <div class="single-inner-9" onclick="hit(this.className,9,1)"></div>
+    <div class="single-inner-12" onclick="hit(this.className,12,1)"></div>
+    <div class="single-inner-5" onclick="hit(this.className,5,1)"></div>
+
+    <div class="triple-20" onclick="hit(this.className,60,3)"></div>
+    <div class="triple-1" onclick="hit(this.className,3,3)"></div>
+    <div class="triple-18" onclick="hit(this.className,54,3)"></div>
+    <div class="triple-4" onclick="hit(this.className,12,3)"></div>
+    <div class="triple-13" onclick="hit(this.className,39,3)"></div>
+    <div class="triple-6" onclick="hit(this.className,18,3)"></div>
+    <div class="triple-10" onclick="hit(this.className,30,3)"></div>
+    <div class="triple-15" onclick="hit(this.className,45,3)"></div>
+    <div class="triple-2" onclick="hit(this.className,6,3)"></div>
+    <div class="triple-17" onclick="hit(this.className,51,3)"></div>
+    <div class="triple-3" onclick="hit(this.className,9,3)"></div>
+    <div class="triple-19" onclick="hit(this.className,57,3)"></div>
+    <div class="triple-7" onclick="hit(this.className,21,3)"></div>
+    <div class="triple-16" onclick="hit(this.className,48,3)"></div>
+    <div class="triple-8" onclick="hit(this.className,24,3)"></div>
+    <div class="triple-11" onclick="hit(this.className,33,3)"></div>
+    <div class="triple-14" onclick="hit(this.className,42,3)"></div>
+    <div class="triple-9" onclick="hit(this.className,27,3)"></div>
+    <div class="triple-12" onclick="hit(this.className,36,3)"></div>
+    <div class="triple-5" onclick="hit(this.className,15,3)"></div>
+
+    <div class="single-outer-20" onclick="hit(this.className,20,1)"></div>
+    <div class="single-outer-1" onclick="hit(this.className,1,1)"></div>
+    <div class="single-outer-18" onclick="hit(this.className,18,1)"></div>
+    <div class="single-outer-4" onclick="hit(this.className,4,1)"></div>
+    <div class="single-outer-13" onclick="hit(this.className,13,1)"></div>
+    <div class="single-outer-6" onclick="hit(this.className,6,1)"></div>
+    <div class="single-outer-10" onclick="hit(this.className,10,1)"></div>
+    <div class="single-outer-15" onclick="hit(this.className,15,1)"></div>
+    <div class="single-outer-2" onclick="hit(this.className,2,1)"></div>
+    <div class="single-outer-17" onclick="hit(this.className,17,1)"></div>
+    <div class="single-outer-3" onclick="hit(this.className,3,1)"></div>
+    <div class="single-outer-19" onclick="hit(this.className,19,1)"></div>
+    <div class="single-outer-7" onclick="hit(this.className,7,1)"></div>
+    <div class="single-outer-16" onclick="hit(this.className,16,1)"></div>
+    <div class="single-outer-8" onclick="hit(this.className,8,1)"></div>
+    <div class="single-outer-11" onclick="hit(this.className,11,1)"></div>
+    <div class="single-outer-14" onclick="hit(this.className,14,1)"></div>
+    <div class="single-outer-9" onclick="hit(this.className,9,1)"></div>
+    <div class="single-outer-12" onclick="hit(this.className,12,1)"></div>
+    <div class="single-outer-5" onclick="hit(this.className,5,1)"></div>
+
+    <div class="double-20" onclick="hit(this.className,40,2)"></div>
+    <div class="double-1" onclick="hit(this.className,2,2)"></div>
+    <div class="double-18" onclick="hit(this.className,36,2)"></div>
+    <div class="double-4" onclick="hit(this.className,8,2)"></div>
+    <div class="double-13" onclick="hit(this.className,26,2)"></div>
+    <div class="double-6" onclick="hit(this.className,12,2)"></div>
+    <div class="double-10" onclick="hit(this.className,20,2)"></div>
+    <div class="double-15" onclick="hit(this.className,30,2)"></div>
+    <div class="double-2" onclick="hit(this.className,4,2)"></div>
+    <div class="double-17" onclick="hit(this.className,34,2)"></div>
+    <div class="double-3" onclick="hit(this.className,6,2)"></div>
+    <div class="double-19" onclick="hit(this.className,38,2)"></div>
+    <div class="double-7" onclick="hit(this.className,14,2)"></div>
+    <div class="double-16" onclick="hit(this.className,32,2)"></div>
+    <div class="double-8" onclick="hit(this.className,16,2)"></div>
+    <div class="double-11" onclick="hit(this.className,22,2)"></div>
+    <div class="double-14" onclick="hit(this.className,28,2)"></div>
+    <div class="double-9" onclick="hit(this.className,18,2)"></div>
+    <div class="double-12" onclick="hit(this.className,24,2)"></div>
+    <div class="double-5" onclick="hit(this.className,10,2)"></div>
+
+    <div class="out" onclick="hit(this.className,0,0)"></div>
+
+    <!--  周りの数字  &　out判定  ここから  -->
+    <div class="num-20" onclick="hit(this.className,0,0)">20</div>
+    <div class="num-1" onclick="hit(this.className,0,0)">1</div>
+    <div class="num-18" onclick="hit(this.className,0,0)">18</div>
+    <div class="num-4" onclick="hit(this.className,0,0)">4</div>
+    <div class="num-13" onclick="hit(this.className,0,0)">13</div>
+    <div class="num-6" onclick="hit(this.className,0,0)">6</div>
+    <div class="num-10" onclick="hit(this.className,0,0)">10</div>
+    <div class="num-15" onclick="hit(this.className,0,0)">15</div>
+    <div class="num-2" onclick="hit(this.className,0,0)">2</div>
+    <div class="num-17" onclick="hit(this.className,0,0)">17</div>
+    <div class="num-3" onclick="hit(this.className,0,0)">3</div>
+    <div class="num-19" onclick="hit(this.className,0,0)">19</div>
+    <div class="num-7" onclick="hit(this.className,0,0)">7</div>
+    <div class="num-16" onclick="hit(this.className,0,0)">16</div>
+    <div class="num-8" onclick="hit(this.className,0,0)">8</div>
+    <div class="num-11" onclick="hit(this.className,0,0)">11</div>
+    <div class="num-14" onclick="hit(this.className,0,0)">14</div>
+    <div class="num-9" onclick="hit(this.className,0,0)">9</div>
+    <div class="num-12" onclick="hit(this.className,0,0)">12</div>
+    <div class="num-5" onclick="hit(this.className,0,0)">5</div>
+    <!--  周りの数字  &　out判定  ここまで  -->
   </div>
 
-  <div id="container" class="wrapper">
-    <!--	<div id="container">	-->
-    <aside>
-      <div class="aside-contents">
-        <h3 class="sub-title">酒田五法</h3>
-
-        <ul class="sub-menu">
-          <li><a href="01_sanzan.html">（1）三山（さんざん）</a></li>
-          <li><a href="#">（2）三川（さんせん）</a></li>
-          <li><a href="#">（3）三空（さんくう）</a></li>
-          <li><a href="#">（4）三兵（さんぺい）</a></li>
-          <li><a href="#">（5）三法（さんぽう）</a></li>
-        </ul>
-      </div><!-- /aside-contents-->
-    </aside>
-
-    <main>
-      <div class="article">
-        <img src="images/logo.png" alt="ロゴ">
-      </div><!-- /article-->
-
-      <div class="gohou_title">（１）三山（さんざん）</div>
-      <div class="article">
-        <p>
-          <a href="01_sanzan.html">三山（さんざん）のチャートパターン詳細はこちら</a>
-        </p>
-        <div class="grid">
-          <figure class="item">
-            <figcaption>三山</figcaption>
-            <img src="images/01_01_sanzan.jpg" alt="三山">
-          </figure>
-          <figure class="item">
-            <figcaption>逆三山</figcaption>
-            <img src="images/01_02_gyakusanzan.jpg" alt="逆三山">
-          </figure>
-          <figure class="item">
-            <figcaption>三尊</figcaption>
-            <img src="images/01_03_sanzon.jpg" alt="三尊">
-          </figure>
-          <figure class="item">
-            <figcaption>逆三尊</figcaption>
-            <img src="images/01_04_gyakusanzon.jpg" alt="逆三尊">
-          </figure>
-        </div>
-
-      </div><!-- /article-->
-
-      <div class="gohou_title">（２）三川（さんせん）</div>
-      <div class="article">
-        <p>
-          <a href="#">三川（さんせん）のチャートパターン詳細はこちら</a>
-        </p>
-        <div class="grid">
-          <figure class="item">
-            <figcaption>三川明けの明星</figcaption>
-            <img src="images/02_01_sansen_akenomyojo.jpg" alt="三川明けの明星">
-          </figure>
-          <figure class="item">
-            <figcaption>三川宵の明星</figcaption>
-            <img src="images/02_02_sansenyoinomyojo.jpg" alt="三川宵の明星">
-          </figure>
-          <figure class="item">
-            <figcaption>三川明けの明星十字星</figcaption>
-            <img src="images/02_03_sansen_akenomyojo_jujiboshi.jpg" alt="三川明けの明星十字星">
-          </figure>
-          <figure class="item">
-            <figcaption>三川宵の明星十字星</figcaption>
-            <img src="images/02_04_sansen_yoinomyojo_jujiboshi.jpg" alt="三川宵の明星十字星">
-          </figure>
-          <figure class="item">
-            <figcaption>三川上放れ二羽鳥</figcaption>
-            <img src="images/02_05_sansen_uwabanare_niwagarasu.jpg" alt="三川上放れ二羽鳥">
-          </figure>
-        </div>
-      </div><!-- /article-->
-
-      <div class="gohou_title">（３）三空（さんくう）</div>
-      <div class="article">
-        <p>
-          <a href="#">三空（さんくう）のチャートパターン詳細はこちら</a>
-        </p>
-        <div class="grid">
-          <figure class="item">
-            <figcaption>三空踏み上げ</figcaption>
-            <img src="images/03_01_sankuu_humiage.jpg" alt="三空踏み上げ">
-          </figure>
-          <figure class="item">
-            <figcaption>三空叩き込み</figcaption>
-            <img src="images/03_02_sankuu_tatakikomi.jpg" alt="三空叩き込み">
-          </figure>
-        </div>
-      </div><!-- /article-->
-
-      <div class="gohou_title">（４）三兵（さんぺい）</div>
-      <div class="article">
-        <p>
-          <a href="#">三兵（さんぺい）のチャートパターン詳細はこちら</a>
-        </p>
-        <div class="grid">
-          <figure class="item">
-            <figcaption>赤三兵</figcaption>
-            <img src="images/04_01_akasanpei.jpg" alt="赤三兵">
-          </figure>
-          <figure class="item">
-            <figcaption>黒三兵</figcaption>
-            <img src="images/04_02_kurosanpei.jpg" alt="黒三兵">
-          </figure>
-          <figure class="item">
-            <figcaption>赤三兵先詰まり</figcaption>
-            <img src="images/04_03_akasanpei_sakidumari.jpg" alt="赤三兵先詰まり">
-          </figure>
-          <figure class="item">
-            <figcaption>黒三兵先詰まり</figcaption>
-            <img src="images/04_04_kurosanpei_sakidumari.jpg" alt="黒三兵先詰まり">
-          </figure>
-          <figure class="item">
-            <figcaption>赤三兵思案星</figcaption>
-            <img src="images/04_05_akasanpei_shianboshi.jpg" alt="赤三兵思案星">
-          </figure>
-          <figure class="item">
-            <figcaption>黒三兵思案星</figcaption>
-            <img src="images/04_06_kurosanpei_shianboshi.jpg" alt="黒三兵思案星">
-          </figure>
-        </div>
-      </div><!-- /article-->
-
-      <div class="gohou_title">（５）三法（さんぽう）</div>
-      <div class="article">
-        <p>
-          <a href="#">三法（さんぽう）のチャートパターン詳細はこちら</a>
-        </p>
-        <div class="grid">
-          <figure class="item">
-            <figcaption>上げ三法</figcaption>
-            <img src="images/05_01_agesanpou.jpg" alt="上三法">
-          </figure>
-          <figure class="item">
-            <figcaption>下げ三法</figcaption>
-            <img src="images/05_02_sagesanpou.jpg" alt="下三法">
-          </figure>
-          <figure class="item">
-            <figcaption>上放れ三法</figcaption>
-            <img src="images/05_03_uwabanare_sanpou.jpg" alt="上放れ三法">
-          </figure>
-          <figure class="item">
-            <figcaption>下放れ三法</figcaption>
-            <img src="images/05_04_shitabanare_sanpou.jpg" alt="下放れ三法">
-          </figure>
-
-        </div>
-      </div><!-- /article-->
-
-    </main>
-
-  </div><!-- /container,wrapper -->
-
   <footer>
-    <div class="footer-slide">
-      <p>
-        日経225　27,104.32　-368.78　02/22　15:15　　　
-        TOPIX　1975.25　-22.21　02/22　15:00　　　
-        JPX日経400　17,828.48　-192.51　02/22　15:00　　　
-        東証プライム市場指数　1016.36　-11.43　02/22　15:00　　　
-        東証グロース市場指数　960.48　-14.28　02/22　15:00　　　
-        マザーズ総合指数　752.75　-11.59　02/22　15:00　　　
-        NYダウ　33,045.09　-84.50　02/23　07:05　　　
-        NASDAQ総合指数　11,507.07　+14.77　02/23　07:15　　　
-        S&P500指数　3991.05　-6.29　02/22　17:05　　　
-        　 　英FT100指数　7,930.63　-47.12　02/22　　　
-        仏CAC40指数　7,299.26　0.00　-　　　
-        独DAX30指数　15,399.89　+2.27　2/22　　　
-        香港ハンセン指数　20,447.66 +23.82　02/23　11:37　　　
-        東証スタンダード市場指数　1042.59　-4.19　02/22　15:00　　　
-      </p>
-    </div>
+    01（ゼロワン） - 501 - Open In Master Out
   </footer>
 
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
